[Freestyler] Fix content jumping to the left when the scrollbar appears
Fixed: 365742436
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5851134
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -119,8 +119,9 @@
 }
 
 .messages-scroll-container {
-  overflow: overlay;
+  overflow: auto;
   flex-grow: 1;
+  scrollbar-gutter: stable;
 }
 
 .messages-container {
